nodex-cli/tests/snapshots/behaviour__graph__check.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 1
{
  "data": {
    "has_errors": true,
    "rule_coverage": [
      {
        "rule_id": "acyclic_relation",
        "subjects": 0,
        "unit": "edges",
        "unjudged": 0
      },
      {
        "rule_id": "cross_field",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_enum",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_parse",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_type",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "orphan",
        "subjects": 6,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "parse_failure",
        "subjects": 8,
        "unit": "files",
        "unjudged": 0
      },
      {
        "rule_id": "required_field",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "stale_review",
        "subjects": 6,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "superseded_reference",
        "subjects": 4,
        "unit": "edges",
        "unjudged": 0
      }
    ],
    "skipped_rules": [],
    "total": 7,
    "violations": [
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "guide-index",
        "path": "docs/index.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "runbook-deploy",
        "path": "docs/runbooks/deploy.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "field": "created",
          "type": "required_field"
        },
        "message": "missing required field: created",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "required_field",
        "severity": "error"
      },
      {
        "details": {
          "days": 162,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 162 days (threshold: 90 days)",
        "node_id": "adr-gamma",
        "path": "docs/decisions/gamma.md",
        "rule_id": "stale_review",
        "severity": "warning"
      },
      {
        "details": {
          "days": 164,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 164 days (threshold: 90 days)",
        "node_id": "readme-readme",
        "path": "docs/readme.md",
        "rule_id": "stale_review",
        "severity": "warning"
      },
      {
        "details": {
          "days": 106,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 106 days (threshold: 90 days)",
        "node_id": "runbook-deploy",
        "path": "docs/runbooks/deploy.md",
        "rule_id": "stale_review",
        "severity": "warning"
      }
    ]
  },
  "ok": true,
  "warnings": [
    {
      "code": "scope_coverage",
      "message": "\"docs/legacy.md\" has kind \"generic\" but no identity.kind_rules glob matches it; add a rule covering this path (map it to \"generic\" explicitly if intended)"
    }
  ]
}
