nodex-cli/tests/snapshots/behaviour__graph__query_annotations.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "entries": [
          {
            "count": 1,
            "key": "closed-command-sweep",
            "sources": [
              {
                "line": 6,
                "path": "docs/notes.md",
                "source": "guide-notes"
              }
            ]
          },
          {
            "count": 1,
            "key": "reference-date-as-input",
            "sources": [
              {
                "line": 4,
                "path": "docs/notes.md",
                "source": "guide-notes"
              }
            ]
          }
        ],
        "name": "promotes"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
