nodex-cli/tests/snapshots/behaviour__graph__query_backlinks_adr_beta.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "guide-index",
        "kind": "guide",
        "location": "L4",
        "path": "docs/index.md",
        "relation": "references",
        "status": "active",
        "title": "Index"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
