nodex-cli/tests/snapshots/behaviour__graph__query_chain_adr_alpha.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "adr-alpha",
        "kind": "adr",
        "path": "docs/decisions/alpha.md",
        "status": "superseded",
        "title": "Alpha"
      },
      {
        "id": "adr-beta",
        "kind": "adr",
        "path": "docs/decisions/beta.md",
        "status": "active",
        "title": "Beta"
      }
    ],
    "total": 2
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
