nodex-cli/tests/snapshots/behaviour__graph__query_components.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "component_id": 1,
        "members": [
          {
            "id": "adr-alpha",
            "kind": "adr",
            "path": "docs/decisions/alpha.md",
            "status": "superseded",
            "title": "Alpha"
          },
          {
            "id": "adr-beta",
            "kind": "adr",
            "path": "docs/decisions/beta.md",
            "status": "active",
            "title": "Beta"
          },
          {
            "id": "adr-gamma",
            "kind": "adr",
            "path": "docs/decisions/gamma.md",
            "status": "active",
            "title": "Gamma"
          },
          {
            "id": "guide-index",
            "kind": "guide",
            "path": "docs/index.md",
            "status": "active",
            "title": "Index"
          },
          {
            "id": "guide-notes",
            "kind": "guide",
            "path": "docs/notes.md",
            "status": "active",
            "title": "Notes"
          }
        ],
        "size": 5
      },
      {
        "component_id": 2,
        "members": [
          {
            "id": "generic-legacy",
            "kind": "generic",
            "path": "docs/legacy.md",
            "status": "active",
            "title": "Legacy note"
          }
        ],
        "size": 1
      },
      {
        "component_id": 3,
        "members": [
          {
            "id": "readme-readme",
            "kind": "readme",
            "path": "docs/readme.md",
            "status": "active",
            "title": "Readme"
          }
        ],
        "size": 1
      },
      {
        "component_id": 4,
        "members": [
          {
            "id": "runbook-deploy",
            "kind": "runbook",
            "path": "docs/runbooks/deploy.md",
            "status": "active",
            "title": "Deploy"
          }
        ],
        "size": 1
      }
    ],
    "total": 4
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
