nodex-cli/tests/snapshots/behaviour__graph__query_covered_by_nodex.toml.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "relation": "covers",
        "status": "active",
        "title": "Index"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
